--- a/css/styles.css
+++ b/css/styles.css
@@ -111,6 +111,8 @@ body {
         0 10px 20px rgba(0, 0, 0, 0.35);
     border: 1px solid rgba(255, 255, 255, 0.08);
     overflow: hidden;
+
+    touch-action: none;
 }
 .game__cell::before {
     content: '';
